k8s/code-server/code-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: code-server
  name: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yaml convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: code-server
    spec:
      containers:
        - args:
            - --auth=password
          image: codercom/code-server:latest
          name: code-server
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /home/coder/.config
              name: code-server-claim0
            - mountPath: /home/coder/project
              name: code-server-claim1
            - mountPath: /home/coder/.local
              name: code-server-claim2
      restartPolicy: Always
      volumes:
        - name: code-server-claim0
          persistentVolumeClaim:
            claimName: code-server-claim0
        - name: code-server-claim1
          persistentVolumeClaim:
            claimName: code-server-claim1
        - name: code-server-claim2
          persistentVolumeClaim:
            claimName: code-server-claim2
