k8s/code-server/code-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: code-server
  name: code-server
spec:
  type: NodePort
  ports:
    - name: "8020"
      port: 8020
      targetPort: 8080
  selector:
    io.kompose.service: code-server
